--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
         name: open-music-api
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/open_music?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+        url: jdbc:mysql://localhost:3306/open_music?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
         username: root
         password: 123456
     sql:
@@ -13,6 +13,13 @@ spring:
             mode: embedded
 
 mybatis-plus:
+    global-config:
+      db-config:
+          logic-delete-field: deleted
+          logic-delete-value: 1
+          logic-not-delete-value: 0
+    configuration:
+        log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     type-handlers-package: com.spidey.openmusicapi.handler
 
 logging:
